# fhir_rdf_validator

./: .gitignore  AUTHORS  ChangeLog  Pipfile  README.md  requirements.txt  setup.cfg
fhir_rdf_validator/: compare_rdf.py  convert_rdf.py  json_to_r4.py  json_to_r5.py  validate.py
fhir_rdf_validator/cache/: account.shexj  activitydefinition.shexj  administrableproductdefinition.shexj  adverseevent.shexj  allergyintolerance.shexj  appointment.shexj  appointmentresponse.shexj  auditevent.shexj  basic.shexj  binary.shexj  biologicallyderivedproduct.shexj  bodystructure.shexj  bundle.shexj  capabilitystatement.shexj  capabilitystatement2.shexj  careplan.shexj  careteam.shexj  catalogentry.shexj  chargeitem.shexj  chargeitemdefinition.shexj  claim.shexj  claimresponse.shexj  clinicalimpression.shexj  clinicaluseissue.shexj  codesystem.shexj  communication.shexj  composition.shexj  (+117 more)
tests/: log  test_convert_rdf.py  test_r4_json.py  test_r5_json.py  test_shex_to_shexj.py  test_validator.py
tutorial/: EmbeddedResource.md  FHIRR4.md  FHIRR5.md  account-example.json  account-example.ttl  company.context.jsonld  company.json  company.nt  company.ttl  demo1.json  demo1.ttl  demo2.json  demo2.ttl  demo3.json  demo3.ttl  demo4.json  mini.conv.json  mini.expanded  mini.frame.json  mini.json  mini.json-ld  mini.n3  mini.nt  mini.ntriples  mini.trig  mini.ttl  mini.xml  mini_tweaked.ntriples  mini_tweaked.ttl  mini_tweaked_expanded.json  mini_tweaked_framed.ttl  patient.json  sample.context.json  tweaked_patient.ttl  tweaked_patient_output.ttl  tweaked_patient_output_pretty.ttl
(+259 files in other folders)
