[metadata]
name = fhir_rdf_validator
url = https://github.com/FHIRCat/fhir_rdf_validator/
author = Harold Solbrig
author-email = solbrig@jhu.edu
summary = FHIR RDF Validation Tool
home-page = https://github.com/FHIRCat/fhir_rdf_validator/
license = CC0 1.0 Universal
python-requires = >=3.7
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: CC0 1.0 Universal
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Langauge :: Python :: 3.8
keywords =
    fhir
    rdf
    shex

[files]
packages =
    fhir_rdf_validator

[entry_points]
console_scripts =
    validate = fhir_rdf_validator.validate:main
